Adapt number of iterations for big benchmarks